# ai-slack-assistant

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
deployment/: deployment.yaml  route.yaml  secret.yaml  service.yaml
src/: app.py  functions.py
src/ai_slack_assistant/: __main__.py  app.py  functions.py
